Adding first_video

--- a/src/styles/components/preloader/index.scss
+++ b/src/styles/components/preloader/index.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
 
-  visibility: visible;
+  background-color: #000;
 
   .preloader-inner {
     width: 350px; height: auto;
