--- a/src/styles/components/home/index.scss
+++ b/src/styles/components/home/index.scss
@@ -3,7 +3,32 @@
 
   margin: 0;
   padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   background: #000;
   overflow: hidden;
+
+  .bgVid {
+    height: 100%;
+
+    display: none;
+
+    @media screen and (min-width: 1650px) {
+      width: 100%; height: auto;
+    }
+
+    @media screen and (max-width: 730px) {
+      width: 100%; height: auto;
+    }
+
+    @media screen and (max-width: 530px) {
+      height: 100%; width: auto;
+    }
+  }
+
+  .playing {
+    display: block;
+  }
 }
