--- a/src/styles/components/home/index.scss
+++ b/src/styles/components/home/index.scss
@@ -10,7 +10,7 @@
   justify-content: center;
 
   background: #000;
-  overflow: hidden;
+  overflow: hidden !important;
 
   .sound-btn {
     position: absolute;
